# BOLR

./: .gitignore  README.md  pyproject.toml
bolr/: __init__.py
csrc/: Makefile  config.mk.example
research_docs/: 01.5_EDA.md  01_Problem_Formulation_and_Evaluation.md  02.5_deep-research-report.md  02_Contextual_Representation_and_Score_Functions.md  04.5_Target_Construction_and_Bayesian_Observation_Models_research.md  04_Target_Construction_and_Observation_Models.md  05.5_Mathematical_Prototype_and_Implementation_Architecture.md  05_Sequential_Bayesian_Inference.md  06_Candidate_B_Ordered_Region_Observations.md  07_Multi_Block_Model_Architecture.md  08_Structured_Priors_and_Block_Dynamics.md  09_Orthogonal_Graph_Residual.md  10_Adaptive_Dynamics_and_Change_Point_Structure.md  11_Posterior_Decision_and_Region_Inference.md  12_Python_Reference_Model_Freeze.md  13_C11_Backend_ABI_Ownership_and_Checkpoint_Design.md  14_C11_Dense_Gaussian_Inference_and_Laplace.md  15_L3A_Native_Targets_and_Candidate_B.md  16_C11_Adaptive_Transitions_and_Change_Detection.md  17_C11_Deterministic_Posterior_Decisions_and_Regions.md  18_C11_RNG_and_Gaussian_Posterior_Sampling.md  19_C11_Monte_Carlo_Ranking_and_Thompson.md  20_C11_Streaming_Ranking_and_Replay.md  21_C11_Checkpoint_Codec_and_Atomic_Persistence.md  22_L5_1_Full_Native_Candidate_A_Historical_Replay.md  23_L5_2_Candidate_A_Policy_Matrix_and_Static_Baselines.md  24_L5_3_Full_Native_Candidate_B_Historical_Replay.md  25_L5_4_Candidate_B_Thompson_Robustness_Audit.md  BOLR_Main.md
scripts/: audit_candidate_b_groups.py  (+10 more)
(+375 files in other folders)
